style: estilizando página home

--- a/global/global/default.html
+++ b/global/global/default.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %} | ToDo - App</title>
+{% include "global/partials/head.html" %}
+<title>{% block title %}{% endblock title %} | ToDo - App</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock content %}
+    <div id="header-menu">
+        {% include "global/partials/header.html" %}
+    </div>
+    <div id="main-content-container">
+        {% block content %}
+        {% endblock content %}
+    </div>
 </body>
 </html>
