--- a/global/global/default.html
+++ b/global/global/default.html
@@ -5,7 +5,7 @@
 <title>{% block title %}{% endblock title %} | ToDo - App</title>
 </head>
 <body>
-    <div id="main-content-container">
+    <div id="main-content-container" sidebar-collapse="true">
         <div id="header-menu">
             {% include "global/partials/header.html" %}
         </div>
