style: mudanças no template

--- a/global/global/default.html
+++ b/global/global/default.html
@@ -17,5 +17,7 @@
         {% endblock content %}
         </div>
     </div>
+    {% load static %}
+    <script src="{% static "global/js/default.js" %}"></script>
 </body>
 </html>
