style: modificando template genérico

--- a/global_templates/global/base.html
+++ b/global_templates/global/base.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 {% include "global/partials/head.html" %}
-<title>{% block base_title %}{% endblock base_title %} | ToDo - App</title>
+<title>{% block title %}{% endblock title %} | ToDo - App</title>
 </head>
 <body>
     {% block base_content %}
