feat: paginação na página inical

--- a/global_templates/global/base_home.html
+++ b/global_templates/global/base_home.html
@@ -10,6 +10,7 @@
     <div id="content">
     {% block content %}
     {% endblock content %}
+    {% include "global/partials/pagination.html" %}
     </div>
 </div>
 {% endblock base_content %}
