--- a/global_templates/global/base_home.html
+++ b/global_templates/global/base_home.html
@@ -14,3 +14,12 @@
     </div>
 </div>
 {% endblock base_content %}
+{% block base_script %}
+    document.getElementById('toggle-bar').addEventListener('click', function(ev) {
+        content = document.getElementById('main-content-container')
+        is_collapsed = Boolean(content.getAttribute('sidebar-collapse').toString().toLowerCase() === 'true')
+        content.setAttribute('sidebar-collapse', !is_collapsed);
+    });
+    {% block script %}
+    {% endblock script %}
+{% endblock base_script %}
