--- a/global_templates/global/global.html
+++ b/global_templates/global/global.html
@@ -5,15 +5,11 @@
 <title>{% block title %}{% endblock title %} | ToDo - App</title>
 </head>
 <body>
-    {% block base_content %}
-    {% endblock base_content %}
+    {% block content %}
+    {% endblock content %}
     {% load static %}
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     {% load sweetify %}
     {% sweetify %}
-    <script type="text/javascript">
-    {% block base_script %}
-    {% endblock base_script %}
-    </script>
 </body>
 </html>
