feat: view para deletar todas as tasks concluídas

--- a/global_templates/global/global.html
+++ b/global_templates/global/global.html
@@ -3,11 +3,14 @@
 <head>
 {% include "global/partials/head.html" %}
 <title>{% block title %}{% endblock title %} | ToDo - App</title>
+{% load static %}
+<script src="{% static 'global/js/default.js' %}"></script>
 </head>
 <body>
     {% block content %}
     {% endblock content %}
-    {% load static %}
+    {% block script %}
+    {% endblock script %}
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     {% load sweetify %}
     {% sweetify %}
